Fixed background for website

--- a/web3_tp_final/web3_tp_final/Views/FindSitter/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/FindSitter/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<User>
 
-<div class="container pt-3">
+<div class="container py-3">
     <h1>Trouver un gardien</h1>
     <div class="row mt-3">
         <div class="col-12">
