--- a/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
@@ -97,10 +97,13 @@
         </div>
     </div>
     <main role="main" style="height: calc(100vh - 72px);">
+        <div class="sap-background">
+
+        </div>
         <div class="wrapper">
             @RenderBody()
         </div>
-        <div class="col-12 row" id="sap-footer">
+        <div class="col-12 row no-gutters" id="sap-footer">
             <div class="text-left justify-content-center col-2">
                 &copy; 2021 - Sit-A-Pup 
             </div>
