--- a/web3_tp_final/web3_tp_final/wwwroot/css/Chat/chat.css
+++ b/web3_tp_final/web3_tp_final/wwwroot/css/Chat/chat.css
@@ -1,20 +1,28 @@
 ﻿.container-chat {
-    border: 2px solid #dedede;
-    background-color: #f1f1f1;
+    border: 2px solid #6B3B2B;
+    background-color: #99533c;
     border-radius: 30px;
     padding: 10px;
     margin: 10px 0;
     width: 100%;
-    font-family: "Open Sans", serif;
+    color: #deb9ad;
 }
 
 .sender {
     font-size: 0.8em;
-    font-weight: bold;
-    font-family: 'Shadows Into Light', cursive;
+    
+    
 }
 
 .darker {
-    border-color: #fff;
-    background-color: #007bff;
+    border-color: #583023;
+    background-color: #6B3B2B;
+}
+
+.margin-div {
+    margin-top: 5rem;
+}
+
+.margin-div-principal {
+    padding-left: 1rem;
 }
