suite reviews dans details user, reste juste à mettre un scrollbar pour les reviews

--- a/web3_tp_final/web3_tp_final/Views/FindSitter/_AvailableSittersList.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/FindSitter/_AvailableSittersList.cshtml
@@ -35,7 +35,7 @@ else
                     </div>
                 </a>
             </div>
-            @foreach (Appointment appointment in user.Appointments.Take(2))
+            @foreach (Appointment appointment in user.AppointmentSitters.Take(2))
             {
                 @if (appointment.Reviews.Any())
                 {
