--- a/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
     @Html.Partial("_GlobalModal")
     <div class="sticky-top">
         <nav class="navbar navbar-expand-lg navbar-light website-navbar">
-            <a class="navbar-brand text-capitalize" href="#">
+            <a class="navbar-brand text-capitalize" asp-controller="Home" asp-action="Index">
                 <img src="~/images/happy.png" class="d-inline-block align-top" width="30" height="30" alt="">
                 Sit-a-pup
             </a>
