--- a/web3_tp_final/web3_tp_final/wwwroot/css/Details/Details.css
+++ b/web3_tp_final/web3_tp_final/wwwroot/css/Details/Details.css
@@ -163,3 +163,15 @@ h6 {
     margin-left: 50px;
     margin-top: 40px;
 }
+
+.scroll {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+    max-height: 400px;
+    overflow: auto;
+}
