changement couleur background details user

--- a/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
+++ b/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
@@ -326,7 +326,7 @@ section {
 
 #UserInputInfo {
     border-radius: 0 10px 10px 0;
-    background-color: white !important;
+    background-color: rgb(247 227 201 / 0.8) !important;
     padding-left: 40px;
     padding-right: 40px;
     padding-bottom: 40px;
