--- a/web3_tp_final/web3_tp_final/wwwroot/css/Details/Details.css
+++ b/web3_tp_final/web3_tp_final/wwwroot/css/Details/Details.css
@@ -174,4 +174,6 @@ h6 {
     list-style: none;
     max-height: 400px;
     overflow: auto;
+    background-color: rgb(247 227 201 / 0.8);
+    border-radius: 8px;
 }
