Added special edit to user page

--- a/web3_tp_final/web3_tp_final/Views/Appointments/Details.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Appointments/Details.cshtml
@@ -155,4 +155,11 @@
             }
         });
     }
+
+    $(document).ready(function () {
+        $(document).on('#UserEditForm', 'submit', function (e) {
+            e.preventDefault();
+            alert("Submit");
+        });
+    });
 </script>
