--- a/web3_tp_final/web3_tp_final/Views/Users/Details.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Users/Details.cshtml
@@ -7,104 +7,51 @@
 <head>
     <link rel="stylesheet" href="~/css/Details/Details.css" />
 </head>
-    <h1 class="text-center margin">Details</h1>    
-    <div class="row margin">
-        <div class="col-md-12 col-lg-6 mb-3" id="UserDetailsCard">
-            <form class="form" asp-action="Edit">
+<h1 class="text-center margin">Details</h1>
+<div class="row margin">
+    <div class="col-md-12 col-lg-6 mb-3" id="UserDetailsCard">
+        @await Html.PartialAsync("_UserDetails")
+
+    </div>
+    <div class="col-md-12 col-lg-6">
+        <div class="col-12 sap-card-header sap-card-header-round">
+            <div class="col-12">
                 <div class="row">
-                    <div class="col-md-3 col-sm-12" id="UserSection">
-                        <div class="h-75 text-center w-100 d-flex mb-2" style="align-items:center;">
-                            <div class="w-100">
-                                <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="mx-auto" />
-                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                <input asp-for="UserName" class="form-control" placeholder="@Model.UserName">
-                                <span asp-validation-for="UserName" class="text-danger" data-color="caramel"></span>
-                            </div>
-                        </div>
-                        <div class="row align-items-center no-gutters mb-2">
-                            @if (ViewBag.CurrentID != null && ViewBag.CurrentID != Model.UserID)
+                    <div class="col-5" id="Sitter-Name">
+                        Global review
+                    </div>
+                    <div class="col-7" id="Overall-Rating">
+                        <span class="fa-pull-right">
+                            @for (int i = 0; i < 5; i++)
                             {
-                                <div class="col-5">
-                                    <a id="BookAppointmentModal" asp-controller="FindSitter" asp-route-id="@Model.UserID" asp-action="BookAppointment">
-                                        <img src="https://img.icons8.com/external-prettycons-solid-prettycons/60/ffffff/external-appointment-business-and-finance-prettycons-solid-prettycons.png" class="btn bouton-size" />
-                                    </a>
-                                </div>
-                                <div class="col-2 w-100">
-                                </div>
-                                <div class="col-5">
-                                    <a asp-controller="Chat" asp-route-id="@Model.UserID" asp-action="Index">
-                                        <img src="https://img.icons8.com/ios-glyphs/30/ffffff/chat.png" class="btn bouton-size" />
-                                    </a>
-                                </div>
+                                if (Model.AverageRating() > i)
+                                {
+                                    <i class="fas fa-star"></i>
+                                }
+                                else
+                                {
+                                    <i class="far fa-star"></i>
+                                }
                             }
-                        </div>
-                            </div>
-                    <div class="col-md-9 col-sm-12" id="UserInputInfo">
-                        <div class="row">
-                            <div class="col-12 User-information-main-title">
-                                Information
-                            </div>
-                            <div class="col-12 User-Info-Input-Title">
-                                <div class="row">
-                                    <div class="col-6">
-                                        @Html.DisplayNameFor(model => model.Email)
-                                    </div>
-                                    <div class="col-6">
-                                        @Html.DisplayNameFor(model => model.PhoneNumber)
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12 User-Information-Input">
-                                <div class="row">
-                                    <div class="col-6">
-                                        <input asp-for="Email" class="form-control" placeholder="@Model.Email">
-                                        <span asp-validation-for="Email" class="text-danger" data-color="caramel"></span>
-                                    </div>
-                                    <div class="col-6">
-                                        <input asp-for="PhoneNumber" class="form-control" placeholder="@Model.PhoneNumber">
-                                        <span asp-validation-for="PhoneNumber" class="text-danger" data-color="caramel"></span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12 User-Info-Input-Title">
-                                <div class="row">
-                                    <div class="col-12">
-                                        @Html.DisplayNameFor(model => model.Address)
-                                    </div>
-                                    <div class="col-12 User-Information-Input">
-                                        <input asp-for="Address" class="form-control" placeholder="@Model.Address">
-                                        <span asp-validation-for="Address" class="text-danger" data-color="caramel"></span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12 User-Info-Input-Title">
-                                <div class="row">
-                                    @if (ViewBag.CurrentID == @Model.UserID)
-                                    {
-                                        <div class="col-12 h-25" style="padding-top: 15px;">
-                                            <input type="submit" value="Sauvegarder" asp-controller="Users" asp-action="Edit" asp-route-id="@Model.UserID" class="btn btn-primary">
-                                        </div>
-                                    }
-                                </div>
-                            </div>
-                        </div>
+                        </span>
                     </div>
                 </div>
-            </form>
-
+            </div>
         </div>
-        <div class="col-md-12 col-lg-6">
-            <div class="col-12 sap-card-header sap-card-header-round">
-                <div class="col-12">
-                    <div class="row">
-                        <div class="col-5" id="Sitter-Name">
-                            Global review
-                        </div>
-                        <div class="col-7" id="Overall-Rating">
-                            <span class="fa-pull-right">
+        <div class="scroll">
+            @foreach (Appointment appointment in Model.AppointmentSitters)
+            {
+                @if (appointment.Reviews.Any())
+                {
+                    <div class="col-12 preview-review-row">
+                        <div class="row">
+                            <div class="col-2">
+                                <div class="row justify-content-center">
+                                    @appointment.Review().User.UserName
+                                </div>
                                 @for (int i = 0; i < 5; i++)
                                 {
-                                    if (Model.AverageRating() > i)
+                                    if (appointment.Review().Stars > i)
                                     {
                                         <i class="fas fa-star"></i>
                                     }
@@ -113,47 +60,24 @@
                                         <i class="far fa-star"></i>
                                     }
                                 }
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="scroll">
-                @foreach (Appointment appointment in Model.AppointmentSitters)
-                {
-                    @if (appointment.Reviews.Any())
-                    {
-                        <div class="col-12 preview-review-row">
-                            <div class="row">
-                                <div class="col-2">
-                                    <div class="row justify-content-center">
-                                        @appointment.Review().User.UserName
-                                    </div>
-                                    @for (int i = 0; i < 5; i++)
-                                    {
-                                        if (appointment.Review().Stars > i)
-                                        {
-                                            <i class="fas fa-star"></i>
-                                        }
-                                        else
-                                        {
-                                            <i class="far fa-star"></i>
-                                        }
-                                    }
-                                </div>
-                                <div class="col-10" style="word-wrap: break-word;">
-                                    @appointment.Review().Comment
-                                </div>
+                            </div>
+                            <div class="col-10" style="word-wrap: break-word;">
+                                @appointment.Review().Comment
                             </div>
                         </div>
-                    }
+                    </div>
                 }
-            </div>
-        </div>        
-    </div>    
+            }
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
+
 
 <script>
-    $('#website-body').addClass('website-background');
     let form;
     $('#BookAppointmentModal').click(function (event) {
         event.preventDefault();
@@ -169,7 +93,67 @@
             }
         });
     });
+
+    $('#testUsers').submit(function (e) {
+        e.preventDefault();
+        $(this).validate();
+        if ($(this).valid()) {
+            alert("Form valid");
+        } else {
+            alert("Form Invalide");
+        }
+    });
+
+    function ShowUserDetails() {
+        $.ajax({
+            url: '/Users/UsersDetails',
+            type: 'get',
+            dataType: 'html',
+            success: function (data) {
+                $('#UserDetailsCard').html(data);
+            },
+            error: function (xhr) {
+                alert(xhr);
+            }
+        });
+    }
+
+    function ShowUserEdit() {
+        $.ajax({
+            url: '/Users/Edit',
+            type: 'get',
+            dataType: 'html',
+            success: function (data) {
+                $('#UserDetailsCard').html(data);
+            },
+            error: function (xhr) {
+                alert(xhr);
+            }
+        });
+    }
+
+    function SubmitUserEditForm() {
+        var form = $('#UserEditForm');
+        form.validate();
+
+        if (form.valid()) {
+            $.ajax({
+                url: '@Url.Action("EditUser", "Users", new { id = Model.UserID })',
+                type: 'post',
+                dataType: 'html',
+                data: {
+                    UserName: $('#UserEditUsername').val(),
+                    Email: $('#UserEditEmail').val(),
+                    PhoneNumber: $('#UserEditPhone').val(),
+                    Address: $('#UserEditAddress').val()
+                },
+                success: function (data) {
+                    $('#UserDetailsCard').html(data);
+                },
+                error: function (xhr) {
+                    alert("Error")
+                }
+            });
+        }
+    }
 </script>
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
