Check if user is connected

--- a/web3_tp_final/web3_tp_final/Views/Home/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
 
         <div class="col-lg-6 mb-3 d-flex align-items-stretch">
             <div class="card bg-primary-200 m-3 p-3">
-                <img src="~/images/chienchat.jpg" class="card-img-top" alt="Dog and Cat">
+                <img src="~/images/dog_cat_account.jpg" class="card-img-top" alt="Dog and Cat">
                 <div class="card-body d-flex flex-column">
                     <p class="card-text mb-4">Créez un compte pour vous et vos animaux</p>
                 </div>
