--- a/web3_tp_final/web3_tp_final/Views/Pets/Delete.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Pets/Delete.cshtml
@@ -4,36 +4,38 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Désinscrire</h1>
+<div class="container">
+    <h1>Désinscrire</h1>
 
-<h3>Êtes-vous certain de vouloir désinscire cet animal?</h3>
-<div>
-    <h4>Pet</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Specie)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Specie)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BirthYear)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.BirthYear)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="PetID" />
-        <input type="submit" value="Désinscrire" class="btn btn-danger" /> |
-        <a asp-action="Index">Retour à la liste</a>
-    </form>
+    <h3>Êtes-vous certain de vouloir désinscire cet animal?</h3>
+    <div>
+        <h4>Pet</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Specie)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Specie)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.BirthYear)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.BirthYear)
+            </dd>
+        </dl>
+
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="PetID" />
+            <input type="submit" value="Désinscrire" class="btn btn-danger" /> |
+            <a asp-action="Index">Retour à la liste</a>
+        </form>
+    </div>
 </div>
