Vérification Sit-A-Pup-Admin. Devra ajouter field active pour user.

--- a/web3_tp_final/SitAPupAdmin/Views/Admins/SupprimerAdmin.cshtml
+++ b/web3_tp_final/SitAPupAdmin/Views/Admins/SupprimerAdmin.cshtml
@@ -10,8 +10,10 @@
 <div class="row">
     <div class="col-3">
         <div id="supprimerAdmin">
-            <label for="idSupprimerAdmin">Id a supprimer</label>
-            <input type="text" id="idSupprimerAdmin" />
+            <div>
+                <label for="idSupprimerAdmin">Id a supprimer</label>
+                <input type="text" id="idSupprimerAdmin" />
+            </div>
             <button class="btn btn-neutral btn-round btn-lg border-dark" onclick="deleteAdmin()">Supprimer</button>
         </div>
     </div>
