--- a/web3_tp_final/SitAPupAdmin/Views/Admins/VoirAdmins.cshtml
+++ b/web3_tp_final/SitAPupAdmin/Views/Admins/VoirAdmins.cshtml
@@ -30,7 +30,7 @@ else
 
             for (i in tableauReponse) {
 
-                texte.innerHTML += "<ul style='list-style-type:none'> <li>ID :" + tableauReponse[i].adminId + "</li><li> Name : " + tableauReponse[i].name + "</li></ul>"
+                texte.innerHTML += "<ul style='list-style-type:none'> <li>ID : " + tableauReponse[i].adminId + "</li><li style='border-bottom:0.5px solid black'> Name : " + tableauReponse[i].name + "</li></ul>"
 
             }
             divReponse.appendChild(texte);
