--- a/web3_tp_final/SitAPupAdmin/Views/Users/SupprimerUser.cshtml
+++ b/web3_tp_final/SitAPupAdmin/Views/Users/SupprimerUser.cshtml
@@ -10,8 +10,10 @@
     <div class="row">
         <div class="col-3">
             <div id="supprimerUser">
-                <label for="idSupprimerUser">Id a supprimer</label>
-                <input type="text" id="idSupprimerUser" />
+                <div>
+                    <label for="idSupprimerUser">Id a supprimer</label>
+                    <input type="text" id="idSupprimerUser" />
+                </div>
                 <button class="btn btn-neutral btn-round btn-lg border-dark" onclick="deleteUser()">Supprimer</button>
             </div>
         </div>
