--- a/web3_tp_final/SitAPupAdmin/Views/Admins/ModifierAdmin.cshtml
+++ b/web3_tp_final/SitAPupAdmin/Views/Admins/ModifierAdmin.cshtml
@@ -16,18 +16,20 @@
         </div>
         <div id="modifierAdmin" style="visibility:hidden">
             <form id="formModifAdmin">
-
-                <label for="adminId">ID de l'admin à modifier</label>
-                <input type="text" name="adminId" id="adminIdModif" />
-
-                <label for="name">Nom d'Utilisateur</label>
-                <input type="text" name="name" id="nameAdminModif" />
-
+                <div>
+                    <label for="adminId">ID de l'admin à modifier</label>
+                    <input type="text" name="adminId" id="adminIdModif" />
+                </div>
+                <div>
+                    <label for="name">Nom d'Utilisateur</label>
+                    <input type="text" name="name" id="nameAdminModif" />
+                </div>
+                <div>
                 <label for="password">Mot de passe</label>
                 <input type="password" name="password" id="passwordAdminModif" />
-
+                </div>
             </form>
-            <button class="btn btn-neutral btn-round btn-lg border-dark" onclick="modifyAdmin()">Modifier</button>
+        <button class="btn btn-neutral btn-round btn-lg border-dark" onclick="modifyAdmin()">Modifier</button>
         </div>
     </div>
 </div>
