--- a/web3_tp_final/SitAPupAdmin/Views/Shared/_Layout.cshtml
+++ b/web3_tp_final/SitAPupAdmin/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 <body>
     <header>
         <nav class="navbar sticky-top navbar-expand-lg navbar-light website-navbar">
-            <a class="navbar-brand text-capitalize" href="#">
+            <a class="navbar-brand text-capitalize" asp-controller="Home" asp-action="Index">
                 <img src="~/images/happy.png" class="d-inline-block align-top" width="30" height="30" alt="">
                 Sit-a-pup
             </a>
