--- a/web3_tp_final/web3_tp_final/Views/Availability/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Availability/Index.cshtml
@@ -48,7 +48,7 @@
                                                             À @availability.EndDate.ToString();
                                                         </span>
                                                         <span class="fa-pull-right">
-                                                            <a asp-controller="Availability" asp-action="Delete" asp-route-id="@availability.AvailabilityID" class="btn btn-danger" data-toggle="confirmation">Supprimer</a>
+                                                            <a asp-controller="Availability" asp-action="Delete" asp-route-id="@availability.AvailabilityID" class="btn btn-danger">Supprimer</a>
                                                         </span>
                                                     </div>
                                         </div>
