Added css to multichat

--- a/web3_tp_final/web3_tp_final/Views/Chat/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Chat/Index.cshtml
@@ -8,7 +8,7 @@
 <head>
     <link rel="stylesheet" href="~/css/Chat/chat.css" />
 </head>
-<div class="margin-div-principal">
+<div class="margin-div-principal" style="display: none;">
     <h1>Chat avec: @receiver.UserName</h1>
 
     <div class="row margin-div">
@@ -90,7 +90,7 @@
         </div>
     </div>
 </div>
-<div class="container">
+<div class="container" style="display: none;">
     <div class="row">&nbsp;</div>
     <div class="row">
         <input type="text" id="senderInput" value="@sender.UserName" style="visibility:hidden" readonly="true" name="senderInput" />
@@ -101,64 +101,56 @@
         <input type="text" id="content" value="" style="visibility:hidden" readonly="true" name="content" />
     </div>
 </div>
+
+@{ 
+    bool test = true;
+}
+
+<div id="ConversationList">
+    <div id="Conversations">
+        @for (int i = 0; i < 30; i++)
+        {
+            <div class="d-block">
+                Salut
+            </div>
+
+            test = !test;
+        }
+    </div>
+</div>
+
+<div id="MainConversation">
+    <div id="CurrentConversation" class="container-fluid">
+        @for (int i = 0; i < 30; i++)
+        {
+            <div class="d-block sap-chat-message @(test ? "user-message" : "recipient-message")">
+                <div class="sap-sent-message">
+                    Bonjour
+                </div>
+            </div>
+
+            test = !test;
+        }
+    </div>
+
+    <div id="CurrentMessage" class="container-fluid">
+        <div class="row no-gutters">
+            <div class="form-group col-11" style="padding-right: 20px">
+                <textarea rows="1" id="NextMessage" class="form-control"></textarea>
+            </div>
+            <div class="form-group col-1">
+                <button id="SendMessage">
+                    Send
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/chat.js"></script>
 
 <script>
-    /*  var id = document.getElementById("senderId").value
-       var currentUsername = document.getElementById("senderInput").value
-       var receiverUsername = document.getElementById("userChat").value
-       var url = "https://localhost:44308/api/Messages/" + id
-       var xhttp = new XMLHttpRequest();
-       xhttp.onreadystatechange = function () {
-           if (this.readyState == 4 && this.status == 200) {
-               var divReponse = document.getElementById("messageList");
-               divReponse.innerHTML = ""
-               var reponse = this.responseText;
-               var tableauReponse = JSON.parse(reponse);
-
-
-               for (i in tableauReponse) {
-                   var div = document.createElement("div");
-
-                   if (tableauReponse[i].sender == id) {
-                       div.className = "col-md-6 offset-md-6";
-                       var div2 = document.createElement("div");
-
-                       div2.className == "container darker bg-primary";
-                       var p = document.createElement("p");
-                       p.className = "sender text-right text-white";
-                       p.innerHTML = document.getElementById("senderInput").value
-                       div2.appendChild(p);
-                       var p2 = document.createElement("p");
-                       p2.className = "text-right text-white";
-                       p2.innerHTML = tableauResposne[i].content;
-                       div2.appendChild(p2);
-                       div.appendChild(div2);
-
-                   }
-                   if (tableauReponse[i].recipient == id) {
-                       div.className = ""
-                       var div2 = document.createElement("div");
-
-                       div2.className == "container bg-light";
-                       var p = document.createElement("p");
-                       p.className = "sender text-left";
-                       p.innerHTML = document.getElementById("userChat").value
-                       div2.appendChild(p);
-                       var p2 = document.createElement("p");
-                       p2.className = "text-left";
-                       p2.innerHTML = tableauResposne[i].content;
-                       div2.appendChild(p2);
-                       div.appendChild(div2);
-                   }
-                   divReponse.appendChild(div);
-               }
-
-           }
-       };
-       xhttp.open("GET", url, true);
-       xhttp.send();*/
     function postMessage() {
         var url = "https://localhost:44308/api/Messages"
         var userIdInt = parseInt(document.getElementById("senderId").value);
