--- a/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
+++ b/web3_tp_final/web3_tp_final/wwwroot/css/mystyle.css
@@ -570,3 +570,71 @@ section {
 .container {
     background-color: rgba(224, 210, 173,0.8);
 }
+
+#ConversationList {
+    height: calc(100vh - 113px);
+    width: 25%;
+    position: absolute;
+    left: 0;
+    overflow-y: auto;
+}
+
+#MainConversation {
+    height: calc(100vh - 113px);
+    width: 75%;
+    position:absolute;
+    right: 0;
+}
+
+#CurrentConversation {
+    height: 90%;
+    overflow-y: scroll;
+}
+
+#CurrentMessage {
+    height: 10%;
+    background-color: rgb(107 59 43 / 86%);
+    padding-top: 10px;
+}
+
+#NextMessage {
+    height: 40px;
+}
+
+#SendMessage {
+    background-color: rgb(107 59 43 / 86%);
+    color: #AB753F;
+    border: 1px solid #AB753F;
+    border-radius: 10px;
+    padding: 0px 20px;
+}
+
+.sap-chat-message {
+    width:50%;
+    clear:both;
+}
+
+.user-message {
+    float:right;
+}
+
+.sap-sent-message {
+    color: #AB753F;
+    padding: 10px;
+    border-radius: 20px;
+}
+
+.user-message .sap-sent-message {
+    float: right;
+    word-break: break-word;
+    background-color: rgb(107 59 43 / 86%);
+}
+
+.recipient-message {
+    float:left;
+}
+
+.recipient-message .sap-sent-message{
+    float: left;
+    background-color: rgba(224, 210, 173,0.8)
+}
